--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,3 +1,12 @@
+@import '~@nebular/auth/styles/all';
+@import 'themes';
+
+@import '~@nebular/theme/styles/globals';
+
+@include nb-install() {
+  @include nb-theme-global();
+  @include nb-auth-global();
+};
 /* You can add global styles to this file, and also import other style files */
 
 // If you want to override variables do it here
